fix: apply z-index to correct element

--- a/packages/vuetify/src/components/VFeatureDiscovery/VFeatureDiscovery.sass
+++ b/packages/vuetify/src/components/VFeatureDiscovery/VFeatureDiscovery.sass
@@ -63,6 +63,9 @@
     justify-content: space-around
     align-items: center
 
+  &__target
+    z-index: 11
+
 // Modifier
 .v-feature-discovery
   &--active
